# tts_streaming_external_conv_agent

./: .gitignore  AGENTS.md  Makefile  README.md  Readme.md  log.py  main.py  pyproject.toml
custom_components/external_conversation/: __init__.py  const.py  manifest.json  strings.json
custom_components/streaming_external_conversation/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
streaming_custom_comp/external_conversation/: __init__.py  config_flow.py  manifest.json
