[project]
name = "hass-external-conversation-agent"
version = "0.1.0"
description = "Home Assistant external conversation agent integration"
requires-python = ">=3.13"
dependencies = [
    "homeassistant>=2025.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
